--- a/style.css
+++ b/style.css
@@ -305,24 +305,31 @@ main{
     display: flex;
     align-items: center;
     background-color: rgb(163, 163, 36);
+    margin-left: 200px;
+    margin-right: 200px;
     gap: 20px;
     padding: 20px;
     overflow-x: auto; /* Enable horizontal scrolling */
     white-space: nowrap; /* Prevent reviews from wrapping to the next line */
 }
 
+.parent_box_rev{
+    background-color: rgb(163, 163, 36);
+}
+
 .review {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: center;
+
     background-color: rgb(230, 230, 221);
-    padding: 20px;
     min-width: 100%; /* Set the minimum width of each review to 100% of the container */
 }
 
 .review img {
     width: 20%;
     height: 10%;
+    border-radius: 100%;
 }
 
 
