--- a/style.css
+++ b/style.css
@@ -354,6 +354,8 @@ main{
         padding: 50px;
         overflow: auto;
         overflow-x: none;
+        margin-left: 0px;
+        margin-right: 0px;
     }
     
     .review{
