--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -20,13 +24,47 @@ nav{
     margin-left: 50px;
     /* margin-right: 100px; */
 }
-nav button{
-    background-color: #f04343;
+nav a, li a{
+    text-decoration: none;
+    color: #333;
+    font-size: 16px;
+    font-weight: 500;
+    transition: 5s ease;
+}
+
+nav a:hover{
+    color: #f04343;
+    transform: scale(1.3);
+}
+
+li a:hover {
+    font-size: 17px;
+    text-decoration: underline; 
+}
+nav li select {
+    border: 0px solid transparent; /* Remove border */
+    border-color: transparent; /* Set border-color to transparent */
+    background-color: transparent;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    display: inline-block; /* Add this property */
+}
+
+
+header button{
+    background-color: #ef2424;
     border: none;
     border-radius: 20px;
     padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 500;
     color: #f7f5f5;
     cursor: pointer;
+    transition: transform 0.3s ease;
+    display: inline-block; /* Add this property */
 }
 nav ul{
     list-style: none;
@@ -34,8 +72,9 @@ nav ul{
     justify-content: space-evenly;
     gap: 20px;
 }
-.book {
-    border-radius: 4px;
+
+main{
+    background-color: rgb(194, 144, 5);
 }
 
 .firstcol{
@@ -87,53 +126,65 @@ nav ul{
     padding: 50px;
 }
 
-.About_us{
+.About_us {
     display: flex;
     flex-direction: column;
     background-color: white;
-    max-height: 100%;
+    padding: 50px;
 }
-.About_us h1{
+
+.About_us h1 {
     font-size: 40px;
     font-weight: 600;
+    margin-top: 0px;
     margin-bottom: 20px;
     text-align: center;
 }
-.About_us p{
+
+.About_us p {
     font-size: 16px;
     font-weight: 400;
-    margin-bottom: 20px;   
+    margin-bottom: 20px;
     margin-left: 50px;
     margin-right: 100px;
     text-align: center;
 }
-.About_us_text{
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    margin-left: 30px;
-}
-.About_us_text p{
+
+.About_us_text p {
     font-size: 14px;
     font-weight: 400;
     text-align: justify;
 }
-.About_us span{
+
+.About_us span {
     font-size: 16px;
     font-weight: 400;
-    margin: 20px;
+    margin-top: 20px; /* Adjust the margin to your preference */
+    margin-bottom: 2px;
     text-align: center;
 }
-.About_us .content{
+
+.About_us .content {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: row;
     gap: 20px;
 }
 
-.About_us_img{
-    width: 200%;
+.About_us_img {
+    width: 63%; /* Adjust as needed */
+    min-height: 300px; /* Set a minimum height */
     position: relative;
 }
+
+.About_us_text {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    flex: 1%; /* Take up remaining vertical space */
+}
+
+
+
 .book-table-overlay{
     position: absolute;
     top: 60%;
@@ -148,6 +199,7 @@ nav ul{
     color: #080808;
 
 }
+
 .About_us ul{
     list-style: none;
     text-align: justify;
@@ -164,6 +216,8 @@ nav ul{
 .more{
     display: flex;
     gap: 20px;
+    background-color: rgb(178, 146, 17);
+    padding: 50px;
 }
 .more .why{
     display: flex;
@@ -172,24 +226,38 @@ nav ul{
     background-color: rgb(252, 252, 249);
     border: 1px solid rgba(5, 5, 5, 0.26);
     border-radius: 5px;
+    align-items: center;
+    padding: 20px;
+    text-align: justify;
 }
 
 .more .why.us1{
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 20px;
-    background-color: rgb(253, 8, 8);
+    background-color: rgb(194, 5, 5);
+    font-size: large;
     transform: scale(1.1);
     color: white;
+    padding: 20px;
+    text-align: justify;
 }
-.why.us1:hover{
-    background-color: rgb(248, 245, 245);
-    transform: scale(0.9);
-    color: rgb(7, 7, 7);
-    transition: transform 0.5s ease;
+.why.us1 button{
+    background-color: rgb(244, 110, 110);
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px;
+    margin-top: 20px;
+    /* margin-left: 35%; */
+    font-size: 16px;
+    font-weight: 500;
+    color: #f7f5f5;
+    cursor: pointer;
 }
+
 .why:hover{
-    background-color: rgb(253, 8, 8);
+    background-color: rgb(194, 5, 5);
     transform: scale(1.1);
     color: white;
     transition: transform 0.5s ease;
@@ -198,7 +266,6 @@ nav ul{
     width: 100%;
     height: 50vh;
     margin: 0;
-    position: sticky;
     top: 0;
     background-image: url('./images/stats-bg.jpg'); /* Replace 'your-image-url.jpg' with the actual path to your image */
     background-size: cover; /* This property ensures that the background image covers the entire element */
@@ -206,7 +273,7 @@ nav ul{
 }
 
 .gap-overlay{
-    background-color: rgba(0, 0, 0, 0.45);
+    background-color: rgba(0, 0, 0, 0.719);
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -234,71 +301,133 @@ nav ul{
 
 .our_menu {
     text-align: center;
+    background-color: rgb(255, 255, 255);
+    overflow: hidden;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+}
+.our_menu h1 {
+    font-size: 40px;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 .menu {
     display: flex;
-    overflow-x: auto; /* Enable horizontal scrolling */
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    flex-direction: column;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    padding: 20px;
+    white-space: wrap;
+    min-width: 100%;
 }
 
-.menu .Breakfast,
-.menu .Lunch {
+.Breakfast,.Lunch {
     display: flex;
-    gap: 20px;
-    flex-shrink: 0; /* Prevent items from shrinking to fit */
-    width: 100%; /* Ensure the entire row is scrollable */
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 10px;
+    padding: 50px;
+    position: relative;
+}
+
+.starter_overlay {
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 0, 0.45); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(12, 12, 12);
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.Breakfast_overlay{
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 0, 0.45); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(12, 12, 12);
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.Lunch_overlay{
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: rgba(0, 0, 0, 0.45); */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: rgb(12, 12, 12);
+    font-size: 2em;
+    font-weight: 600;
+}
+
+.menu_bar {
+    background-color: #f5f3f3; /* Adjust the background color */
+    color: rgb(7, 7, 7); /* Adjust the text color */
+    text-align: center;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    text-align: center;
+}
+.menu .items{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgba(5, 5, 5, 0.16);
+    border-radius: 5px;
     text-align: center;
     font-size: large;
+    font-weight: bold;
 }
-
-.menu .Breakfast .item1,
-.menu .Breakfast .item2,
-.menu .Breakfast .item3,
-.menu .Lunch .item4,
-.menu .Lunch .item5,
-.menu .Lunch .item6 {
+.menu_bar h1 {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 10px;
     text-align: center;
-    flex-shrink: 0; /* Prevent items from shrinking to fit */
-    width: 30%; /* Adjust as needed */
 }
 
-.menu img {
-    max-width: 100%;
-    height: auto; /* Maintain aspect ratio */
+.menu_bar ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
 }
 
-.menu::-webkit-scrollbar {
-    width: 0; /* Remove scrollbar width */
-  }
-  
-  /* Show scrollbar and style on hover */
-  .menu:hover::-webkit-scrollbar {
-    width: 5px; /* Adjust scrollbar width as needed */
-    height: 8px;
-  }
-  
-  /* Optional: Style the track and handle on hover */
-  .menu:hover::-webkit-scrollbar-track {
-    background-color: #f1f1f1; /* Track color on hover */
-  }
-  
-  .menu:hover::-webkit-scrollbar-thumb {
-    background-color: rgba(7, 7, 7, 0.2); /* Handle color on hover */
-    border-radius: 6px; /* Adjust border-radius for a rounded handle */
-  }
-  
-  .menu:hover::-webkit-scrollbar-thumb:hover {
-    background-color: #555; /* Handle color on hover when hovered */
-  }
+.menu_bar a {
+    text-decoration: none;
+    color: rgb(2, 2, 2);
+    transition: color 0.3s, transform 0.3s;
+}
 
-
-
-main{
-    background-color: rgb(163, 163, 36);
+.menu_bar a:hover {
+    color: #f04343;
+    transform: scale(1.3);
 }
 
 .reviews {
@@ -307,22 +436,59 @@ main{
     background-color: rgb(163, 163, 36);
     margin-left: 200px;
     margin-right: 200px;
-    gap: 20px;
+    gap: 20%;
     padding: 20px;
-    overflow-x: auto; /* Enable horizontal scrolling */
-    white-space: nowrap; /* Prevent reviews from wrapping to the next line */
+    flex-wrap: nowrap;
+    overflow: hidden;
+}
+
+.reviews::-webkit-scrollbar {
+    width: 0; /* Remove scrollbar width */
+}
+
+.revscr ul{
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+}
+.revscr li{
+    list-style: none;
+}
+.revscr a{
+    text-decoration: none;
+    color: rgb(2, 2, 2);
+    transition: color 5s, transform 0.1s;
+    font-size: 1.5em;
+    font-weight: bold;
+    border-radius: 100%;
+}
+.revscr a:hover{
+    color: #060606;
+    /* transform: scale(1); */
+}
+
+.revscr li a:hover {
+    font-size: 1em;
+    text-decoration: underline; 
 }
 
 .parent_box_rev{
+    display: flex;
+    flex-direction: column;
     background-color: rgb(163, 163, 36);
+    margin: 0;
+    align-items: center;
 }
-
+.parent_box_rev h1{
+    padding: 20px;
+    text-align: center;
+}
 .review {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-    background-color: rgb(230, 230, 221);
+    background-color: rgb(163, 163, 36);
+    /* border: 1px solid rgba(5, 5, 5, 0.16); */
     min-width: 100%; /* Set the minimum width of each review to 100% of the container */
 }
 
@@ -330,6 +496,209 @@ main{
     width: 20%;
     height: 10%;
     border-radius: 100%;
+}
+
+.all_events{
+    text-align: center;
+}
+/* .all_events.main{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    overflow: hidden;
+} */
+#Events1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    scroll-snap-type: x mandatory;
+    /* justify-content: space-evenly; */
+    /* align-items: center; */
+    background-color: rgb(255, 255, 255);
+    padding: 50px;
+    gap: 10%;
+}
+
+.Events {
+    display: flex;
+    flex-direction: row;
+    gap: 3px;
+    color: white;
+    background-size: cover;
+    min-width: 100%;
+}
+.event {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    flex-wrap: wrap;
+    width: 100%;
+}
+.event.one{
+    background-image: url('./images/events-1.jpg');
+}
+.event.two{
+    background-image: url('./images/events-2.jpg');
+}
+.event.three{
+    background-image: url('./images/events-3.jpg');
+}
+.event_overlay{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    width: fit-content;
+    height: 80vh;
+    background-size: cover;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.639);
+    color: white;
+    padding: 10px;
+}
+.event_overlay div{
+    width: 100%;
+}
+
+.chef_txt{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 10%;
+    /* padding-top: 5%; */
+    padding-bottom: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    background-color: rgb(163, 163, 36);
+}
+.chef_txt h1{
+    font-size: 2em;
+    font-weight: 600;
+    margin-top: 0px;
+    text-align: center;
+}
+.chefs {
+    display: flex;
+    margin-top: 2%;
+    gap: 20px;
+}
+.chef.one {
+    /* background-image: url('./images/chefs/chefs-1.jpg'); */
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+.border{
+    position: relative;
+    margin-top: -20%;
+}
+.chef_overlay{
+    background-color: #ffff;
+    padding: 20px;
+    margin-top: -2%;
+}
+
+.chef.one:hover{
+    transform: scale(1.08);
+}
+.chef.two:hover{
+    transform: scale(1.08);
+}
+.chef.three:hover{
+    transform: scale(1.08);
+}
+
+.BookAtable{
+    text-align: center;
+    padding-right: 10%;
+    padding-left: 10%;
+}
+
+.book_table {
+    display: flex;
+    background-color: aliceblue;
+    gap: 20px;
+    justify-content: space-evenly;
+}
+.book_table_form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-size: cover;
+    padding: 5%;
+}
+.reservation{
+    width: 50%;
+}
+.book_table_form form{
+    display: flex; 
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-evenly;
+}
+.book_table_form input{
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    display: inline-block; /* Add this property */
+}
+.book_table_form form .row1{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.book_table_form form .row2{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+.book_table_form textarea{
+    width: 100%;
+    height: 30%;
+}
+.book_table_form button{
+    background-color: #ef2424;
+    border: none;
+    width: 50%;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #f7f5f5;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    display: inline-block; /* Add this property */
+}
+
+.scrl_event ul{
+    display: flex;
+    gap: 30px;
+    flex-direction: row;
+    justify-content: center;
+}
+.scrl_event li{
+    list-style: none;
+    transition: transform 0.3s ease;
+    transform: scale(1.6);
+}
+.scrl_event{
+    height: fit-content;
+    margin: 0;
+}
+
+.scrl_event li:hover{
+    transform: scale(2);
 }
 
 
@@ -347,25 +716,16 @@ main{
 
     .reviews {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        background-color: rgb(163, 163, 36);
-        gap: 20px;
-        padding: 50px;
-        overflow: auto;
-        overflow-x: none;
-        margin-left: 0px;
-        margin-right: 0px;
+        flex-wrap: nowrap;
+        flex: 1;
+        min-width: 100%;
+        overflow-x: hidden;
+        scroll-snap-type: x mandatory;
     }
     
     .review{
         display: flex;
         flex-direction: row;
-        width: 100%;
-        /* align-items: center; */
-        background-color: rgb(230, 230, 221);
-        padding: 50px;
-        white-space: wrap;
     }
 
     .review img{
@@ -382,7 +742,7 @@ main{
         margin-bottom: 20px;
     }
 
-    nav button {
+    header button {
         margin-bottom: 10px;
         margin-left: 0px;
         margin-right: 0px;
@@ -405,8 +765,8 @@ main{
 
     .About_us {
         diaplay: inline-block;
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-left: 20px;
+        margin-right: 20px;
         width: 100%;
     }
     .menu::-webkit-scrollbar {
