--- a/style.css
+++ b/style.css
@@ -75,6 +75,8 @@ nav ul{
 
 main{
     background-color: rgb(194, 144, 5);
+    background-image: url('./images/stats-bg.jpg');
+    position: sticky;
 }
 
 .firstcol{
@@ -266,14 +268,15 @@ main{
     width: 100%;
     height: 50vh;
     margin: 0;
-    top: 0;
     background-image: url('./images/stats-bg.jpg'); /* Replace 'your-image-url.jpg' with the actual path to your image */
     background-size: cover; /* This property ensures that the background image covers the entire element */
     background-repeat: no-repeat;
+    overflow: hidden; /* Hide the content that overflows the gap container */
 }
 
 .gap-overlay{
     background-color: rgba(0, 0, 0, 0.719);
+    width: 100%;
     height: 100%;
     align-items: center;
     justify-content: center;
@@ -381,6 +384,7 @@ main{
     font-size: 2em;
     font-weight: 600;
 }
+
 
 .menu_bar {
     background-color: #f5f3f3; /* Adjust the background color */
@@ -700,7 +704,172 @@ main{
 .scrl_event li:hover{
     transform: scale(2);
 }
+@keyframes scrollGallery {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
+}
 
+.gallery {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(194, 144, 5);
+    padding-left: 50px;
+    padding-right: 50px;
+    /* padding-bottom: 50px; */
+    gap: 20px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    /* background-size: cover; */
+    overflow: hidden; /* Hide the overflowing content */
+}
+
+.contain_gallery {
+    display: flex;
+    gap: 10%;
+    animation: scrollGallery 40s linear infinite; /* Adjust the animation duration */
+}
+
+.gallery_img img{
+    border: 2px solid #060505;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.44);
+    transition: transform 0.3s ease;
+}
+
+.gallery_img{
+    flex: 0 0 20%; /* Set the width of each image to 20% of the container */
+}
+.gallery_img:hover{
+    transform: scale(1.2);
+    border: 10px solid #f04343;
+}
+
+.gallery_btn ul {
+    display: flex;
+    gap: 20px;
+}
+
+.gallery_btn li {
+    list-style: none;
+    transition: transform 0.3s ease;
+    transform: scale(1.6);
+}
+
+.gallery_btn li:hover {
+    transform: scale(2);
+}
+
+.contain_contact{
+    display: flex;
+    flex-direction: column;
+}
+.contact{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: rgb(244, 243, 240);
+    padding: 50px;
+    gap: 20px;
+}
+.Addrs .img_ran img{
+    max-width: 100px;
+}
+.Addrs .txt_con{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.Addrs{
+    background-color: rgb(121, 116, 116);
+    width: 100%;
+    gap: 30px;
+    padding-right: 2%;
+    padding-left: 2%;
+    padding-top: 1%;
+}
+
+.cont_form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(194, 144, 5);
+    padding: 50px;
+    gap: 20px;
+}
+
+.cont_form form{
+    display: flex; 
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.cont_form form .row1{
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+    gap: 10px;
+}
+.cont_form form input{
+    width: 100%;
+    height: 50px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #333;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    display: inline-block;
+}
+
+
+.cont_form textarea{
+    width: 100%;
+    height: 40%;
+}
+.cont_form button{
+    background-color: #ef2424;
+    border: none;
+    width: 20%;
+    border-radius: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #f7f5f5;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+    display: inline-block; /* Add this property */
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+}
+footer .sec1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+footer .css{
+    display: flex;
+    flex-direction: column;
+    flex: wrap;
+}
+footer .sec2{
+    text-align: center;
+}
 
 @media screen and (max-width: 1000px) {
     body{
